--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
@@ -3,6 +3,10 @@ Pos=60,60
 Size=400,400
 
 [Window][Main Menu]
-Pos=10,10
+Pos=189,40
 Size=200,300
+
+[Window][Debug Controls]
+Pos=789,58
+Size=300,400
 
