--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
@@ -3,10 +3,26 @@ Pos=60,60
 Size=400,400
 
 [Window][Main Menu]
-Pos=189,40
+Pos=-6,21
 Size=200,300
 
 [Window][Debug Controls]
-Pos=789,58
-Size=300,400
+Pos=801,127
+Size=300,442
+
+[Window][Level Editor Menu]
+Pos=10,10
+Size=200,100
+
+[Window][Track Editor]
+Pos=10,10
+Size=200,300
+
+[Window][Level Editor Controls]
+Pos=10,10
+Size=200,100
+
+[Window][Editor Menu]
+Pos=10,10
+Size=200,200
 
