--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/RogueRacingBattleRoyale.vcxproj
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/RogueRacingBattleRoyale.vcxproj
@@ -146,16 +146,24 @@
     <ClCompile Include="Car.cpp" />
     <ClCompile Include="GameplayScreen.cpp" />
     <ClCompile Include="imgui_impls.cpp" />
+    <ClCompile Include="LevelEditorScreen.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="PhysicsSystem.cpp" />
+    <ClCompile Include="SplineTrack.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
     <ClInclude Include="Box.h" />
     <ClInclude Include="Car.h" />
     <ClInclude Include="GameplayScreen.h" />
+    <ClInclude Include="imconfig.h" />
+    <ClInclude Include="imgui_impls.h" />
     <ClInclude Include="InputState.h" />
+    <ClInclude Include="LevelEditorScreen.h" />
     <ClInclude Include="PhysicsSystem.h" />
+    <ClInclude Include="ScreenState.h" />
+    <ClInclude Include="SplineTrack.h" />
+    <ClInclude Include="TrackNode.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
