--- a/NickProjects/graphicsTutorials/PixelCraft/PixelCraft.vcxproj.filters
+++ b/NickProjects/graphicsTutorials/PixelCraft/PixelCraft.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="DebugDraw.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BlockMeshManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Timer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BlockMeshManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
