--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/RogueRacingBattleRoyale.vcxproj
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/RogueRacingBattleRoyale.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="LevelEditorScreen.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="PhysicsSystem.cpp" />
+    <ClCompile Include="RoadMeshGenerator.cpp" />
     <ClCompile Include="SplineTrack.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -163,6 +164,7 @@
     <ClInclude Include="InputState.h" />
     <ClInclude Include="LevelEditorScreen.h" />
     <ClInclude Include="PhysicsSystem.h" />
+    <ClInclude Include="RoadMeshGenerator.h" />
     <ClInclude Include="ScreenState.h" />
     <ClInclude Include="SplineTrack.h" />
     <ClInclude Include="TrackNode.h" />
