--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
@@ -15,8 +15,8 @@ Pos=10,10
 Size=200,100
 
 [Window][Track Editor]
-Pos=-11,293
-Size=314,300
+Pos=-3,-3
+Size=471,607
 
 [Window][Level Editor Controls]
 Pos=10,10
