--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
@@ -15,8 +15,8 @@ Pos=10,10
 Size=200,100
 
 [Window][Track Editor]
-Pos=-10,-5
-Size=471,607
+Pos=59,-19
+Size=475,607
 
 [Window][Level Editor Controls]
 Pos=10,10
@@ -25,4 +25,8 @@ Size=200,100
 [Window][Editor Menu]
 Pos=10,10
 Size=200,200
+
+[Window][Test Mode]
+Pos=10,10
+Size=200,100
 
