--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
@@ -15,7 +15,7 @@ Pos=10,10
 Size=200,100
 
 [Window][Track Editor]
-Pos=389,67
+Pos=119,73
 Size=364,607
 
 [Window][Level Editor Controls]
@@ -27,6 +27,10 @@ Pos=10,10
 Size=200,200
 
 [Window][Test Mode]
-Pos=10,40
-Size=350,259
+Pos=13,40
+Size=350,213
+
+[Window][Car Properties]
+Pos=14,291
+Size=496,450
 
