--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
@@ -15,7 +15,7 @@ Pos=10,10
 Size=200,100
 
 [Window][Track Editor]
-Pos=79,7
+Pos=81,-12
 Size=364,737
 
 [Window][Level Editor Controls]
@@ -31,6 +31,6 @@ Pos=11,26
 Size=350,213
 
 [Window][Car Properties]
-Pos=47,236
+Pos=47,235
 Size=256,512
 
