--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
@@ -15,8 +15,8 @@ Pos=10,10
 Size=200,100
 
 [Window][Track Editor]
-Pos=8,6
-Size=364,737
+Pos=28,11
+Size=364,722
 
 [Window][Level Editor Controls]
 Pos=10,10
@@ -33,4 +33,12 @@ Size=350,213
 [Window][Car Properties]
 Pos=18,225
 Size=256,512
+
+[Window][Save Level##modal]
+Pos=618,308
+Size=300,120
+
+[Window][Load Level##modal]
+Pos=618,170
+Size=300,400
 
