--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/RogueRacingBattleRoyale.vcxproj
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/RogueRacingBattleRoyale.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="imgui_impls.cpp" />
     <ClCompile Include="LevelEditorScreen.cpp" />
     <ClCompile Include="LevelRenderer.cpp" />
+    <ClCompile Include="LevelSaveLoad.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ObjectManager.cpp" />
     <ClCompile Include="PhysicsSystem.cpp" />
@@ -166,6 +167,7 @@
     <ClInclude Include="InputState.h" />
     <ClInclude Include="LevelEditorScreen.h" />
     <ClInclude Include="LevelRenderer.h" />
+    <ClInclude Include="LevelSaveLoad.h" />
     <ClInclude Include="ObjectManager.h" />
     <ClInclude Include="PhysicsSystem.h" />
     <ClInclude Include="PlaceableObject.h" />
