--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
@@ -15,7 +15,7 @@ Pos=10,10
 Size=200,100
 
 [Window][Track Editor]
-Pos=28,11
+Pos=59,-28
 Size=364,722
 
 [Window][Level Editor Controls]
@@ -31,8 +31,8 @@ Pos=12,27
 Size=350,213
 
 [Window][Car Properties]
-Pos=18,225
-Size=256,512
+Pos=91,249
+Size=374,530
 
 [Window][Save Level##modal]
 Pos=618,308
