--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
@@ -3,7 +3,7 @@ Pos=60,60
 Size=400,400
 
 [Window][Main Menu]
-Pos=-5,22
+Pos=11,11
 Size=200,300
 
 [Window][Debug Controls]
@@ -15,7 +15,7 @@ Pos=10,10
 Size=200,100
 
 [Window][Track Editor]
-Pos=59,-28
+Pos=51,258
 Size=364,722
 
 [Window][Level Editor Controls]
@@ -31,7 +31,7 @@ Pos=12,27
 Size=350,213
 
 [Window][Car Properties]
-Pos=91,249
+Pos=1225,65
 Size=374,530
 
 [Window][Save Level##modal]
@@ -41,4 +41,12 @@ Size=300,120
 [Window][Load Level##modal]
 Pos=618,170
 Size=300,400
+
+[Window][AI Settings]
+Pos=986,458
+Size=443,215
+
+[Window][Debug Info]
+Pos=242,12
+Size=200,150
 
