--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
@@ -15,8 +15,8 @@ Pos=10,10
 Size=200,100
 
 [Window][Track Editor]
-Pos=51,258
-Size=364,722
+Pos=53,258
+Size=362,722
 
 [Window][Level Editor Controls]
 Pos=10,10
@@ -27,12 +27,12 @@ Pos=10,10
 Size=200,200
 
 [Window][Test Mode]
-Pos=12,27
+Pos=12,49
 Size=350,213
 
 [Window][Car Properties]
-Pos=1225,65
-Size=374,530
+Pos=8,461
+Size=363,506
 
 [Window][Save Level##modal]
 Pos=618,308
@@ -43,10 +43,14 @@ Pos=618,170
 Size=300,400
 
 [Window][AI Settings]
-Pos=986,458
-Size=443,215
+Pos=6,289
+Size=443,158
 
 [Window][Debug Info]
 Pos=242,12
+Size=200,150
+
+[Window][OpenGL Debug]
+Pos=220,10
 Size=200,150
 
