Attempt to get SpriteFont working in racing game

--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/RogueRacingBattleRoyale.vcxproj
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/RogueRacingBattleRoyale.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ObjectManager.cpp" />
     <ClCompile Include="PhysicsSystem.cpp" />
+    <ClCompile Include="RaceCountdown.cpp" />
     <ClCompile Include="RoadMeshGenerator.cpp" />
     <ClCompile Include="SplineTrack.cpp" />
     <ClCompile Include="WheelCollider.cpp" />
@@ -174,6 +175,7 @@
     <ClInclude Include="ObjectManager.h" />
     <ClInclude Include="PhysicsSystem.h" />
     <ClInclude Include="PlaceableObject.h" />
+    <ClInclude Include="RaceCountdown.h" />
     <ClInclude Include="RoadMeshGenerator.h" />
     <ClInclude Include="ScreenState.h" />
     <ClInclude Include="SplineTrack.h" />
