--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/RogueRacingBattleRoyale.vcxproj.filters
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/RogueRacingBattleRoyale.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="AIDriver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RaceCountdown.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h">
@@ -120,6 +123,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AIDriver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RaceCountdown.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
