--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
@@ -15,7 +15,7 @@ Pos=10,10
 Size=200,100
 
 [Window][Track Editor]
-Pos=15,247
+Pos=11,256
 Size=362,722
 
 [Window][Level Editor Controls]
@@ -27,11 +27,11 @@ Pos=10,10
 Size=200,200
 
 [Window][Test Mode]
-Pos=-1,2
+Pos=2,-7
 Size=350,214
 
 [Window][Car Properties]
-Pos=1463,2
+Pos=1469,2
 Size=454,975
 
 [Window][Save Level##modal]
@@ -43,7 +43,7 @@ Pos=619,171
 Size=300,400
 
 [Window][AI Settings]
-Pos=-6,747
+Pos=16,738
 Size=545,205
 
 [Window][Debug Info]
