--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
@@ -3,20 +3,20 @@ Pos=60,60
 Size=400,400
 
 [Window][Main Menu]
-Pos=11,11
-Size=200,300
+Pos=2,1
+Size=206,228
 
 [Window][Debug Controls]
 Pos=726,189
-Size=300,442
+Size=417,405
 
 [Window][Level Editor Menu]
 Pos=10,10
 Size=200,100
 
 [Window][Track Editor]
-Pos=11,256
-Size=362,722
+Pos=0,171
+Size=541,779
 
 [Window][Level Editor Controls]
 Pos=10,10
@@ -27,12 +27,12 @@ Pos=10,10
 Size=200,200
 
 [Window][Test Mode]
-Pos=2,-7
-Size=350,214
+Pos=-1,0
+Size=302,223
 
 [Window][Car Properties]
-Pos=1463,-4
-Size=454,975
+Pos=1478,4
+Size=441,975
 
 [Window][Save Level##modal]
 Pos=618,308
@@ -43,14 +43,18 @@ Pos=619,171
 Size=300,400
 
 [Window][AI Settings]
-Pos=16,738
-Size=545,205
+Pos=303,794
+Size=356,158
 
 [Window][Debug Info]
 Pos=242,12
 Size=200,150
 
 [Window][OpenGL Debug]
-Pos=220,10
-Size=200,150
+Pos=228,1
+Size=311,171
+
+[Window][Performance Debug]
+Pos=3,222
+Size=300,743
 
