--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
@@ -15,7 +15,7 @@ Pos=10,10
 Size=200,100
 
 [Window][Track Editor]
-Pos=2,184
+Pos=3,191
 Size=541,779
 
 [Window][Level Editor Controls]
@@ -31,7 +31,7 @@ Pos=-1,0
 Size=302,288
 
 [Window][Car Properties]
-Pos=1980,216
+Pos=1527,-4
 Size=441,975
 
 [Window][Save Level##modal]
@@ -39,7 +39,7 @@ Pos=618,308
 Size=300,120
 
 [Window][Load Level##modal]
-Pos=620,174
+Pos=620,175
 Size=300,400
 
 [Window][AI Settings]
